<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99F1F1"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/person_icon"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/userNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/txt_background"
                android:padding="10dp"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signEmailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/txt_background"
                android:padding="10dp"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/signPasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/txt_background"
                android:padding="10dp"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="signInUser"
                android:background="@drawable/btn_backgrpond"
                android:padding="10dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:text="@string/signup" />

            <Button
                android:id="@+id/acextistBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goForLogin"
                android:textColor="@color/white"
                android:background="@drawable/btn_backgrpond"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/already_have_an_account" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>